	modmap file, saving original state and restoring original state

	* lisp/sawfish/wm/xsettingsd.jl: xsettigsd module, handles a
	xsettingsd instance during a sawfish session

	* lisp/sawfish/wm/xgamma.jl: xgamma module, allows changing gamma
	settings from sawfishrc

	* AUTOSTART: doc file that explains use of sawfish.wm.prg.* modules

	* XSettings: example configuration file for xsettingsd

2012-09-06  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/state/transient.jl: :after-set for
	decorate-transients

	* lisp/sawfish/wm/menus.jl: make menus-include-shortcuts a defcustom
	again.

	* lisp/sawfish/wm/util/nokogiri.jl: make customize-show-symbols a
	defcustom again.

	* lisp/sawfish/wm/util/compat.jl: remove menus-include-shortcuts,
	customize-show-symbols from compat list to make defcustom work.

	* lisp/sawfish/wm/menus.jl: use resize-window-prompt in
	window-ops-menu, as resize-window-to-dimensions has been removed more
	than a year ago -.-

	* lisp/sawfish/wm/commands/move-resize.jl: completely new
	resize-window-prompt func. now displays old width and old height
	before prompting and checks whether given values actually are numbers.

2012-09-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/compat.jl: remove decorate-transients from compat
	list (defcustom works now)

2012-09-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/state/transient.jl: make decorate-transients a
	defcustom.

	* lisp/sawfish/wm/tabs/tab.jl: improve check-win. Always rebuild list
	of marked windows when a marked window is closed. [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: add frame-style-tabs-support-p.
	Only allow tabbing a window, if the frame-style of the parent window
	has support for tabs [note that in Sawfish different windows can have
	different frame-styles!] [fuchur]

	* themes/StyleTab/theme.jl: updated for latest tab changes [fuchur]

	* themes/Elberg-tabbed/theme.jl: support for tab-system as of 1.9.1
	[fuchur]