@@ -25,6 +25,9 @@
 
 	* XSettings: example configuration file for xsettingsd
 
+	* lisp/sawfish/wm/user.jl: handle loading/auto-starts of
+	sawfish.wm.prg.* modules
+
 2012-09-06  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/state/transient.jl: :after-set for
 	decorate-transients
